--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "@truffle/hdwallet-provider": "^2.1.15",
+    "@xmtp/xmtp-js": "^11.5.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "express": "^4.19.1",
