--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@openzeppelin/contracts": "^5.0.2",
     "@truffle/hdwallet-provider": "^2.1.15",
     "@xmtp/xmtp-js": "^11.5.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "express": "^4.19.1",
+    "openai": "^4.29.2",
     "web3": "^4.6.0"
   }
 }
